--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
