--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Bruno Frigeri <bpiraja97@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.3",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
@@ -16,6 +17,6 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "test": "test"
+    "test": "jest"
   }
 }
